hphp/hack/test/typecheck/const_attribute/static/abstract/abstract_inherits_from_traits.php.exp
File "abstract_inherits_from_traits.php", line 12, characters 16-16:
Class `C` does not correctly implement all required members  (Typing[4340])
  File "abstract_inherits_from_traits.php", line 13, characters 7-7:
  Some members are incompatible with those declared in type `A`
  File "abstract_inherits_from_traits.php", line 9, characters 42-43:
  The property `$p` has the wrong type
  File "abstract_inherits_from_traits.php", line 5, characters 38-40:
  Expected `int`
  File "abstract_inherits_from_traits.php", line 9, characters 38-40:
  But got `num`
